fixed project section height on mobile view

--- a/src/Components/RightContent/Projects/Projects.scss
+++ b/src/Components/RightContent/Projects/Projects.scss
@@ -11,7 +11,7 @@
 }
 .projects{
     margin: 100px auto;
-    clip-path: polygon(0% 10%, 100% 0%, 100% 80%, 0% 100%);
+    clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
     background-image:    linear-gradient(
         rgba(255, 255, 255, 0.89), 
         rgba(255, 255, 255, 0.863)
@@ -22,7 +22,6 @@
     background-repeat: no-repeat;
     padding: 100px 0;
     width: 100%;
-    height: 80vh;
 
     h2{
         color:#289AF1;
